<resources>
    <string name="app_name">My Application</string>
    <string name="login_btn">LOGIN</string>
    <string name="email">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="linktext">The link to reset your password will be sent to your registered email</string>
    <string name="Email">Email</string>
    <string name="continu">CONTINUE</string>
    <string name="FORGOT">FORGOT PASSWORD</string>
    <string name="text1">The link has been sent to your email.</string>
    <string name="text2">The generated link will be active for 24 hours.</string>
    <string name="MyRequest">My Requests</string>
    <string name="NewRequest">NEW REQUEST</string>
    <string name="search">Search</string>
    <string name="filtertext">FILTER\nShowing approved requests.</string>
    <string name="purchase">PUR &#8211; 2019 &#8211; 056</string>
    <string name="submitted">Submitted on</string>
    <string name="approved">Approved</string>
    <string name="filter">Filter</string>
    <string name="noti">Notification icon</string>
    <string name="showmore">SHOW MORE</string>
    <string name="requisition">REQUISITION</string>
    <string name="req1">req1</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="dash">- - - - -</string>
    <string name="note">NOTE</string>
    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis, tortor sit amet tempor vehicula.</string>
    <string name="reject">REQUEST TYPE</string>
    <string name="self">SELF</string>
    <string name="team">TEAM / DEPARTMENT / BRANCH</string>
    <string name="some">SOMEONE ELSE</string>
    <string name="save">SAVE DRAFT</string>
    <string name="nxt">NEXT</string>
    <string name="menu">menu</string>
    <string name="items">ITEMS</string>
    <string name="loren_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="add">ADD ITEMS</string>
    <string name="num_one">01</string>
    <string name="date">10 Jul 2019</string>
    <string name="rs">45,000</string>
    <string name="ibm">IBM ThinkServer TS150 Tower Server With Max. Processor 1 x Intel Xeon E3 (Quad Core) E3-1225 v5"(3.3 GHz /Cache 8 MB)... </string>
    <string name="read">READ MORE</string>
    <string name="attachment">ATTACHMENTS</string>
    <string name="attach_files">ATTACH FILES</string>
    <string name="invite_people">INVITE PEOPLE</string>
    <string name="add_peopel">ADD PEOPLE</string>
    <string name="luke">Luke Ray</string>
    <string name="amet">Lorem ipsum doler sit amet.</string>
    <string name="daisy">Daisy Lake</string>
    <string name="mark">Mark Smith</string>
    <string name="approval">APPROVAL(S)</string>
    <string name="add_approval">ADD APPROVER</string>
    <string name="ack">ACKNOWLEDGEMENT</string>
    <string name="registred">Your request has been registered.</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis, tortor sit amet tempor vehicula, tortor ipsum faucibus nunc, id aliquam lacus odio nec magna. Cras a ipsum placerat, efficitur nibh sed, iaculis elit. Mauris semper tempor facilisis.</string>
    <string name="abc">abc0037429023.doc</string>
    <string name="kb">976KB    </string>
    <string name="upload">UPLOAD</string>
    <string name="write">write the description…</string>
    <string name="error_msg">This field is required.</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="avatar">avatar</string>
    <string name="delete">delete</string>
    <string name="delete">delete</string>
    <string name="delete">delete</string>
</resources>

