<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/border"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/menu_border">

        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginBottom="9dp"
            android:contentDescription="@string/FORGOT"
            android:src="@drawable/menu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:background="#FDFDFD">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/requisition" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="#D3D3D3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="94dp"
            android:layout_marginLeft="94dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/two"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/three"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="191dp"
            android:layout_marginLeft="191dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="227dp"
            android:layout_marginLeft="227dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/four"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="293dp"
            android:layout_marginLeft="293dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/five"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="257dp"
            android:layout_marginLeft="257dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />


        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="360dp"
            android:layout_marginLeft="360dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle"
            android:gravity="center|center_horizontal"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="325dp"
            android:layout_marginLeft="325dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@drawable/item_border">


        <TextView
            android:id="@+id/T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="254dp"
            android:layout_marginRight="254dp"
            android:layout_marginBottom="89dp"
            android:text="@string/attachment"
            android:textColor="@color/attachment"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/T2"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/loren_item"
            android:textColor="@color/loren_text_color"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="297dp"
            android:layout_marginLeft="297dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="23dp"
            android:text="@string/attach_files"
            android:textColor="@color/attachment"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="68dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:src="@drawable/attach_icon"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="397dp"
        android:layout_height="137dp">

        <RelativeLayout
            android:id="@+id/R2"
            android:layout_width="220dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="85dp"
            android:background="@drawable/border"
            android:padding="15dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/abc"
                android:textColor="@color/kb"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/T3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/kb"
                android:textColor="@color/kb"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="152dp"
            android:layout_height="85dp"
            android:layout_alignBottom="@+id/R2"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="-33dp"
            android:layout_toEndOf="@+id/R2"
            android:layout_toRightOf="@+id/R2"
            android:background="@color/upload"
            android:gravity="center"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="220dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="53dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/write"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="373dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="24dp"
            android:background="@color/error">

            <ImageView
                android:id="@+id/image12"
                android:layout_width="43dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="314dp"
                android:layout_marginRight="314dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/error"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="207dp"
                android:layout_marginRight="207dp"
                android:text="@string/error_msg"
                android:textColor="#CB1720"
                android:textSize="12sp" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="289dp"
            android:layout_marginRight="289dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/underline"
            android:text="@string/save"
            android:textColor="@color/attachment"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/log_in_botton"
            android:text="@string/nxt"
            android:textColor="@color/white" />

    </RelativeLayout>


</LinearLayout>